<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/composeActivityDefaultConfigScanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_compose_default_config_scan" />

        <Button
            android:id="@+id/xmlActivityDefaultConfigScanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_xml_default_config_scan" />

        <Button
            android:id="@+id/manual_config_scan_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_manual_config_scan" />

        <Button
            android:id="@+id/json_config_scan_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_json_config_scan" />

        <Button
            android:id="@+id/async_config_scan_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_async_config_scan" />

        <Button
            android:id="@+id/results_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_measurement_results" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/version_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />
    </LinearLayout>
</ScrollView>